Anthos/Security/MTLS.yaml

apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "mesh-wide-mtls"
spec:
    mtls:
        mode: STRICT
