Anthos/Security/PeerAuthentication.yaml

apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
    name: "restricted-mtls"
    namespace: strict-mtls-service
spec:
    mtls:
        mode: STRICT
